--- a/assign.css
+++ b/assign.css
@@ -131,6 +131,7 @@ margin-bottom: 50px;
     font-family: 'Kalnia', serif;
     font-size: 60px;
     font-weight: bold;
+    text-align: center;
    }
    .letter2 {
     width: 50%;
@@ -223,7 +224,7 @@ margin-bottom: 50px;
         position: relative;
     }
     .graphic-img {
-        min-height: 150vh;
+        min-height: 100vh;
         width: 100%;
         height: 100%;
     }
