--- a/assign.css
+++ b/assign.css
@@ -88,7 +88,7 @@ margin-bottom: 50px;
     
 }
    /* heading */
-   @media only screen and (max-width:490px){
+   @media only screen and (max-width:480px){
         .container {
             min-height: 150vh;
             width: 100%;
@@ -110,6 +110,9 @@ margin-bottom: 50px;
         .nav-menu {
             display: none;
             padding: 20px;
+        }
+        .creative div {
+            font-size: 50px;
         }
    }
 /* second section - fourth- section */
@@ -247,7 +250,7 @@ margin-bottom: 50px;
         text-align: center;
         width: 100%;
         z-index: 2;
-        top: 75rem;
+        top: 80rem;
         left: 7px;
         font-weight: bolder;
     }
