--- a/assign.css
+++ b/assign.css
@@ -220,6 +220,10 @@ margin-bottom: 50px;
     }
     .letter1 {
         text-align: center;
+        font-size: 40px;
+    }
+    .letter2 {
+        width: 80%;
     }
     .fourth-section {
         display: flex;
