--- a/assign.css
+++ b/assign.css
@@ -89,6 +89,9 @@ margin-bottom: 50px;
 }
    /* heading */
    @media only screen and (max-width:480px){
+        body {
+            overflow-x: hidden;
+        }
         .container {
             min-height: 150vh;
             width: 100%;
